2006-10-30  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* src/formats/molreport.cpp: New psuedo-format to generate atom
	and bond information as suggested by Rich Apodaca. Addresses
	PR#1587499.

2006-10-27  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* scripts/openbabel.i, scripts/*: Updated with changes from Martin
	Vogt to fix break (likely dating back to header split of atom.h,
	bond.h, residue.h). 

2006-10-20 Chris Morley <ob@gaseq.co.uk>

	*  src/formats.xml/xml.cpp (ReadChemObject): added extra error
	message and convert the rest to use obErrorLog.
	
	* src/formats/mdlformat.cpp: modify description to work around
	bug in wxWidgets radiobuttons.
	
2006-10-18  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* src/obconversion.h, src/obconversion.cpp: Make sure to free
	streams created using ReadString, ReadFile, or WriteFile()
	methods. Fixes PR#1578916.

2006-10-17  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* src/formats/chemdrawcdx.cpp: Fixed corruption of 2D coordinates
	caused by attempted conversion from CDX scale to Angstroms. Fixes
	PR#1576703.

	* configure.in, configure, Makefile.*: Bump to version 2.1.0b2 for
	next snapshot (now using autoconf-2.60).

	* data/*, src/fingerprints/finger3.cpp: Rename pattern file to
	SMARTS_InteLigand.txt.

	* src/obiter.h: Fix GCC warning reported by Carsten.

	* src/formats/*format.cpp: Update chemical MIME types,
	specification URLS and extensions from the chemical MIME project:
	http://sf.net/projects/chemical-mime 

	* scripts/openbabel.i: Add output string for
	OBTypeTable::Translate().

	* scripts/*: Regenerate.

	* test/textbuffer.cpp, test/vector3.cpp: New tests for newline
	translation and vector3 manipulations.

2006-09-30 Chris Morley <ob@gaseq.co.uk>

	* src/formats/fastsearchformat.cpp(ReadChemObject):
	Output message with the properties of the index if no
	SMILES structure provided.
	
	* src/fingerprint.h: Added FastSearch::GetIndexHeader()
	Reformat tabs.
	