@@ -1,5 +1,5 @@
 dnl Process this file with autoconf to produce a configure script.
-AC_INIT([Open Babel], 2.1.0b2, openbabel-discuss@lists.sourceforge.net, openbabel)
+AC_INIT([Open Babel], 2.1.0b3, openbabel-discuss@lists.sourceforge.net, openbabel)
 AC_CONFIG_SRCDIR(src/zipstreamimpl.h)
 AM_INIT_AUTOMAKE([no-define])
 AM_MAINTAINER_MODE
@@ -263,7 +263,7 @@ AC_CONFIG_COMMANDS([src/babelconfig.h],
 AC_OUTPUT(Makefile data/Makefile src/Makefile src/math/Makefile \
 		   src/formats/Makefile src/fingerprints/Makefile \
 		   src/formats/xml/Makefile src/formats/inchi/Makefile \
+       src/GUI/Makefile \
 		   test/Makefile test/cmltest/Makefile tools/Makefile \
 		   doc/Makefile scripts/Makefile openbabel-2.0.pc)
 
-#		   src/GUI/Makefile \
